# daylee.cli

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml
commands/: daylee-update.md
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: daylee-update.md  daylee.md
src/daylee/: api.py  cli.py  config.py  flusher.py  forward.py  hooks.py  paths.py  queue.py  redact.py
tests/: conftest.py  test_cli_config.py  test_config.py  test_connect.py  test_forward.py  test_hooks.py  test_queue.py  test_redact.py
