[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daylee"
version = "0.1.0"
description = "Daylee CLI: bridges Claude Code sessions into Daylee standup drafts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Daylee" }]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.scripts]
daylee = "daylee.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/daylee"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
